# run_gpt2

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gpt2_prompt_demo/: __init__.py  __main__.py  generator.py  web.py
